--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-beautifulsoup4==4.9.2
-Flask==1.1.1
-gunicorn==20.0.4
-mysql-connector-python==8.0.16
+beautifulsoup4==4.7.1
+black
+fastapi==0.61.1
 pylint==2.5.2
 pylint-exit==1.1.0
-requests==2.24.0
-urllib3==1.24.3
+PyMySQL==0.9.3
+requests==2.23.0
+SQLAlchemy==1.3.16
+mysql-connector-python==8.0.16
+uvicorn==0.12.1
