--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@
 language: python
 services: docker
 python:
-    - 3.6
+  - 3.7
 
 before_install:
-    - docker build --tag ml-blogs .
+  - docker build --tag ml-blogs .
 
 # Run project checker
 script:
-    - docker run --rm -it ml-blogs ./utils/check-project.sh
+  - docker run --rm -it ml-blogs ./utils/check_project.sh
